enum NormalizeMethod {
  none,
  zero_to_one,
  minus_one_to_one,
}
